[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-support-triage"
version = "1.0.0"
description = "OpenEnv environment for customer support ticket triage and resolution"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_id = "customer-support-triage-v1"
entry_point = "server.app:app"